--- a/public/checkout-styles.css
+++ b/public/checkout-styles.css
@@ -62,6 +62,8 @@ h3 {
     transform: scale(1.02); /* Slightly enlarge on hover */
 }
 
+
+
 .order-summary {
     margin-bottom: 30px;
 }
@@ -139,7 +141,7 @@ h3 {
     margin-top: 20px;
 }
 
-.modal {
+#couponModal {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -153,7 +155,7 @@ h3 {
     background-color: rgba(0, 0, 0, 0.5);
 }
 
-.modal-content {
+#couponModal .modal-content {
     background-color: #fefefe;
     margin: 15% auto;
     padding: 20px;
@@ -164,15 +166,15 @@ h3 {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-.close {
+#couponModal .close {
     color: #aaa;
     float: right;
     font-size: 28px;
     font-weight: bold;
 }
 
-.close:hover,
-.close:focus {
+#couponModal .close:hover,
+#couponModal .close:focus {
     color: black;
     text-decoration: none;
     cursor: pointer;
