--- a/views/partials/user/header.ejs
+++ b/views/partials/user/header.ejs
@@ -40,8 +40,8 @@
             <ul class="navbar-nav mx-auto"> <!-- Centered items -->
               <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
               <li class="nav-item"><a class="nav-link" href="/products">Products</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">About Us</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+              <li class="nav-item"><a class="nav-link" href="/about-us">About Us</a></li>
+              <li class="nav-item"><a class="nav-link" href="/contact-us">Contact</a></li>
               <li class="nav-item">
           
                 <% if(locals.user){ %>
