--- a/views/user/product-detail.ejs
+++ b/views/user/product-detail.ejs
@@ -1,4 +1,5 @@
 <%- include('../partials/user/header.ejs') %>
+<link rel="stylesheet" href="product-styles.css">
 
 <div class="detail-content">
     <div class="pedalist-breadcrumb container mt-3">
